# cesiumtoolkit

./: README.md  pyproject.toml
examples/GS24/: trim_txtfile_to_size.py
paper/: paper.bib  paper.docx  paper.md
scripts/: run-cesium.py  run-crossover.py
src/cesiumtoolkit/: anmorg1min.py  cablecorr.py  cesiumraw2anmorg.py  dv_min2obsc.py  dvcorrection.py  igrfcorrection.py  protonraw2anmorg.py  trksplitter.py
src/ishiharautils/: __init__.py  ishiharahoupipeline.py  llaconverter.py  lncorrection.py  lsdconverter.py
